--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <td>(4*19*19)-1</td>
                 <td>26500</td>
                 <td>
-                  <a href="#" class="btn btn-warning btn-sm edit">Edit</a>
+                  <a href="#" class="btn btn-danger btn-sm edit">Edit</a>
                 </td>
               </tr>
             </tbody>
